--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
 <meta charset="UTF-8">
 <title>For You</title>
 
@@ -39,7 +41,6 @@
         display: none;
     }
 
-    /* TEXT STYLES */
     .title-big {
         font-size: 42px;
         margin-bottom: 10px;
@@ -69,19 +70,19 @@
 <!-- PAGE 1 -->
 <div id="page1" class="page">
     <div class="title-normal">ehcuse mua</div>
-    <img src="wellwell/emoji.png" class="emoji" alt="emoji">
+    <img src="./wellwell/emoji.png" class="emoji" alt="emoji">
 </div>
 
 <!-- PAGE 2 -->
 <div id="page2" class="page hidden">
     <div class="title-big">Good Morning</div>
     <div class="title-normal">for you</div>
-    <img src="wellwell/emoji2.png" class="emoji" alt="emoji">
+    <img src="./wellwell/emoji2.png" class="emoji" alt="emoji">
     <div class="title-small">i apologized for yesterday</div>
 </div>
 
 <!-- BACKGROUND MUSIC -->
-<audio id="bgMusic" src="wellwell/bg-music.mpeg" loop></audio>
+<audio id="bgMusic" src="./wellwell/bg-music.mpeg" loop></audio>
 
 <script>
     const page1 = document.getElementById("page1");
@@ -95,7 +96,7 @@
     function startExperience() {
         if (started) return;
         started = true;
-        bgMusic.play();
+        bgMusic.play().catch(() => {});
     }
 
     function goToPage2() {
