--- a/index.html
+++ b/index.html
@@ -56,7 +56,6 @@
         margin-top: 20px;
     }
 
-    /* REALLY BIG EMOJI */
     .emoji {
         width: 420px;
         max-width: 90vw;
@@ -70,19 +69,19 @@
 <!-- PAGE 1 -->
 <div id="page1" class="page">
     <div class="title-normal">ehcuse mua</div>
-    <img src="./wellwell/emoji.png" class="emoji" alt="emoji">
+    <img src="wellwell/emoji.png" class="emoji" alt="emoji">
 </div>
 
 <!-- PAGE 2 -->
 <div id="page2" class="page hidden">
     <div class="title-big">Good Morning</div>
     <div class="title-normal">for you</div>
-    <img src="./wellwell/emoji2.png" class="emoji" alt="emoji">
+    <img src="wellwell/emoji2.png" class="emoji" alt="emoji">
     <div class="title-small">i apologized for yesterday</div>
 </div>
 
 <!-- BACKGROUND MUSIC -->
-<audio id="bgMusic" src="./wellwell/bg-music.mpeg" loop></audio>
+<audio id="bgMusic" src="wellwell/bg-music.mpeg" loop></audio>
 
 <script>
     const page1 = document.getElementById("page1");
@@ -93,22 +92,13 @@
 
     let started = false;
 
-    function startExperience() {
-        if (started) return;
-        started = true;
-        bgMusic.play().catch(() => {});
-    }
-
-    function goToPage2() {
-        page1.classList.add("hidden");
-        page2.classList.remove("hidden");
-    }
-
     document.body.addEventListener("click", () => {
         if (!started) {
-            startExperience();
+            started = true;
+            bgMusic.play().catch(() => {});
         } else if (!page1.classList.contains("hidden")) {
-            goToPage2();
+            page1.classList.add("hidden");
+            page2.classList.remove("hidden");
         }
     });
 </script>
