--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
         margin-top: 20px;
     }
 
+    /* 🔥 BIG ON PHONE + BIG ON LAPTOP */
     .emoji {
-        width: 420px;
-        max-width: 90vw;
+        width: min(95vw, 700px);
         height: auto;
     }
 </style>
@@ -69,19 +69,19 @@
 <!-- PAGE 1 -->
 <div id="page1" class="page">
     <div class="title-normal">ehcuse mua</div>
-    <img src="./wellwell/emoji.png" class="emoji" alt="emoji">
+    <img src="./wellwell/emoji.png?v=4" class="emoji" alt="">
 </div>
 
 <!-- PAGE 2 -->
 <div id="page2" class="page hidden">
     <div class="title-big">Good Morning</div>
     <div class="title-normal">for you</div>
-    <img src="./wellwell/emoji2.png" class="emoji" alt="emoji">
+    <img src="./wellwell/emoji2.png?v=4" class="emoji" alt="">
     <div class="title-small">i apologized for yesterday</div>
 </div>
 
 <!-- BACKGROUND MUSIC -->
-<audio id="bgMusic" src="./wellwell/bg-music.mpeg" loop></audio>
+<audio id="bgMusic" src="./wellwell/bg-music.mpeg?v=4" loop></audio>
 
 <script>
     const page1 = document.getElementById("page1");
@@ -89,7 +89,6 @@
     const bgMusic = document.getElementById("bgMusic");
 
     bgMusic.volume = 0.2;
-
     let started = false;
 
     document.body.addEventListener("click", () => {
