--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+
+<!-- 🔑 CRITICAL: correct mobile scaling -->
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <title>For You</title>
 
-<!-- Handwritten font (matches image style) -->
+<!-- Handwritten font -->
 <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
 
 <style>
@@ -24,6 +28,7 @@
         background: #ffffff;
     }
 
+    /* 👇 SCALE THE ENTIRE PAGE */
     .page {
         position: absolute;
         width: 100%;
@@ -33,6 +38,16 @@
         align-items: center;
         justify-content: center;
         text-align: center;
+
+        transform: scale(1);
+        transform-origin: center;
+    }
+
+    /* 📱 PHONE BOOST */
+    @media (max-width: 600px) {
+        .page {
+            transform: scale(1.35);
+        }
     }
 
     .hidden {
@@ -54,9 +69,9 @@
         margin-top: 20px;
     }
 
-    /* BIG on phone + BIG on laptop */
+    /* Emoji still responsive, page scaling does the real work */
     .emoji {
-        width: min(98vw, 800px);
+        width: min(95vw, 700px);
         height: auto;
     }
 </style>
@@ -67,19 +82,19 @@
 <!-- PAGE 1 -->
 <div id="page1" class="page">
     <div class="title-normal">ehcuse mua</div>
-    <img src="./wellwell/emoji2.png?v=5" class="emoji" alt="">
+    <img src="./wellwell/emoji2.png?v=6" class="emoji" alt="">
 </div>
 
 <!-- PAGE 2 -->
 <div id="page2" class="page hidden">
     <div class="title-big">Good Morning</div>
     <div class="title-normal">for you</div>
-    <img src="./wellwell/emoji.png?v=5" class="emoji" alt="">
+    <img src="./wellwell/emoji.png?v=6" class="emoji" alt="">
     <div class="title-small">i apologized for yesterday</div>
 </div>
 
 <!-- BACKGROUND MUSIC -->
-<audio id="bgMusic" src="./wellwell/bg-music.mpeg?v=5" loop></audio>
+<audio id="bgMusic" src="./wellwell/bg-music.mpeg?v=6" loop></audio>
 
 <script>
     const page1 = document.getElementById("page1");
