--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <div class="title-big">Good Afternoon</div>
     <div class="title-normal">for you</div>
     <img src="./wellwell/emoji.png?v=7" class="emoji" alt="">
-    <div class="title-small">i apologized for yesterday</div>
+    <div class="title-small">i apologize for yesterday</div>
 </div>
 
 <!-- BACKGROUND MUSIC -->
