--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
 <!-- PAGE 2 -->
 <div id="page2" class="page hidden">
-    <div class="title-big">Good Afternoon</div>
+    <div class="title-big">Good Evening</div>
     <div class="title-normal">for you</div>
     <img src="./wellwell/emoji.png?v=7" class="emoji" alt="">
     <div class="title-small">i apologize for yesterday</div>
